--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,10 @@ body::-webkit-scrollbar {
     border-bottom: 1px solid var(--blue-suave);
 }
 
+.menuOpen {
+    display: inline-flex !important;
+}
+
 /*CONFIG BANNER PCL*/
 #banner-pcl {
     background-image: url(/assets/img/background-pcl.png);
@@ -240,11 +244,6 @@ body::-webkit-scrollbar {
     justify-content: center;
 }
 
-.blog-button {
-    display: flex;
-    justify-content: center;
-}
-
 .blog-news {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -319,6 +318,12 @@ body::-webkit-scrollbar {
 .area4:hover {
     transform: scale(1.1);
     opacity: 100%;
+}
+
+
+.blog-button {
+    display: flex;
+    justify-content: center;
 }
 
 .blog-button button{
@@ -544,7 +549,7 @@ body::-webkit-scrollbar {
 }
 
 .social-footer {
-    padding: 70px 0px 30px 0px;
+    padding: 70px 0px 0px 0px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -691,4 +696,202 @@ body::-webkit-scrollbar {
 #botao-ancora img {
     width: 20px;
     height: 18px;
+}
+
+@media (max-width:576px) {
+    /*CONFIG SECTION HEADER*/
+    #header {
+        padding: 0px 30px;
+    }
+
+    #menu-list ul, #menu-list li {
+        display: none;
+    }
+
+    #menu-toggle {
+        display: inline-flex;
+    }
+    
+
+    /*CONFIG SECTION BANNER PRINCIPAL*/
+    #banner-pcl {
+      padding: 0px 30px;
+    }
+
+    .title-banner h1 {
+        font-size: 70px;
+    }
+    
+    .subtitle-banner h2 {
+        font-size: 18px;
+    }
+
+    /*CONFIG SECTION NEWS*/
+    .news-container {
+        grid-template-columns: 1fr;
+        padding: 0px 30px;
+    }
+
+    .text-news {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+    
+    .title-news h3 {
+        font-size: 24px;
+    }
+    
+    .img-news {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+
+
+    /*CONFIG SECTION FUTURE*/
+    .future-container {
+        padding: 0px 30px;
+    }
+    
+    .future-description h4 {
+        font-size: 24px;
+    }
+    
+    .future-description p {
+        font-size: 16px;
+    }
+    
+    .future-galeria {
+        max-width: 425px;
+        height: auto;
+        flex-direction: column;
+    }
+
+    /*CONFIG SECTION BLOG*/
+    .blog-container {
+        padding: 0px 30px;
+    }
+    
+    .blog-news {
+        grid-template-columns: 1fr;
+        gap: 25px;
+    }
+    
+    .area1 {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+    
+    .area2 {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+    
+    .area3 {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+        height: 400px;
+    }
+    
+    .area4 {
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+    }
+
+    
+    /*CONFIG SECTION INFO*/
+    .info-container {
+        flex-direction: column;
+        gap: 80px;
+        padding: 0px 30px;
+    }
+    
+    .box img {
+        width: 50px;
+        height: 50px;
+    }
+    
+    .box h4 {
+        font-size: 30px;
+    }
+    
+    .box p {
+        font-size: 16px;
+    }
+
+
+    /*CONFIG SECTION MINI GALERIA*/
+    .mini-galeria-container {
+        padding: 0px 30px;
+    }
+    
+    .text-mini-galeria {
+        text-align: center;
+    }
+    
+    .images-mini-galeria {
+        height: auto;
+        flex-direction: column;
+    }
+    
+    .galeria-img1, .galeria-img2, .galeria-img3 {
+        flex: 1;
+    }
+    
+    .galeria-img1 img, .galeria-img2 img, .galeria-img3 img {
+        width: 100%;
+        height: 400px;
+    }
+
+
+    /*CONFIG SECTION TEXTO*/
+    .texto-container {
+        padding: 70px 30px;
+    }
+    
+    .texto p {
+        text-align: left;
+    }
+    
+
+    /*CONFIG SECTION TRIBAL*/
+    #section-tribal {
+        padding: 70px 30px;
+    }
+    
+    .area-tribal-conteudo{
+        flex-direction: column;
+        height: auto;
+    }
+    
+    .tribal-right img {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .texto-left h4 {
+        font-size: 36px;
+    }
+
+
+    /*CONFIG FOOTER CONTAINER*/
+    .social-footer {
+        padding: 70px 30px;
+    }
+    
+    .info-footer {
+        flex-direction: column;
+        gap: 40px;
+        padding: 0px 30px;
+    }
+    
+    .direitos-footer {
+        padding: 70px 30px 0px 30px;
+    }
+
+
+    /*CONFIG BOTÃO ANCORA*/
+    #botao-ancora {
+        right: 30px;
+        bottom: 30px;
+    }
 }
