--- a/assets/css/privacidade.css
+++ b/assets/css/privacidade.css
@@ -1,24 +1,3 @@
-/*RESET CSS*/
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/*PERSONALIZAÇÃO SCROLL BAR*/
-body::-webkit-scrollbar {
-    width: 20px;
-}
-
-::-webkit-scrollbar-track {
-    background-color: #333;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: #05D9E8;
-    border-radius: 5px;
-}
-
 /*VARIÁVEIS*/
 :root {
     --white: #FFF;
@@ -33,75 +12,6 @@ body::-webkit-scrollbar {
 /*CONFIG BODY*/
 body {
     background-image: linear-gradient(to right, var(--black), var(--blue-suave-dark));
-}
-
-/*CONFIG HEADER*/
-#header {
-    width: 100%;
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #fff;
-}
-
-.container {
-    width: 1140px;
-}
-
-#nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-/*CONFIG MENU*/
-#menu-toggle {
-    width: 24px;
-    height: 32px;
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    gap: 5px;
-}
-
-.line1, .line2, .line3 {
-    height: 3px;
-    width: 24px;
-    background-color: #000;
-}
-
-/*CONFIG LOGO*/
-.logo {
-    width: 100px;
-}
-
-.logo img {
-    width: 64px;
-    height: 64px;
-}
-
-/*CONFIG BUTTONS*/
-#menu-list ul, #menu-list li {
-    list-style: none;
-    display: inline-flex;
-    padding: 0px 24px;
-}
-
-#menu-list a {
-    text-decoration: none;
-    font-size: 18px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: normal;
-    color: var(--black);
-    transition: all 0.5s;
-    padding: 10px;
-    border-bottom: 1px solid transparent;
-}
-
-#menu-list a:hover, #menu-list .button-activate a {
-    color: var(--blue-suave);
-    border-bottom: 1px solid var(--blue-suave);
 }
 
 .org-container {
@@ -124,6 +34,7 @@ p {
     font-weight: normal;
     color: #fff;
     line-height: 25px;
+    text-align: justify;
 }
 
 a {
@@ -149,182 +60,10 @@ li {
     color: #fff;
 }
 
-/*CONFIG FOOTER CONTAINER*/
-#footer {
-    display: flex;
-    justify-content: center;
-    background-image: linear-gradient(to right, var(--black), var(--blue-suave-dark));
-}
-
-.info-footer {
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-    padding: 70px 0px;
-}
-
-.caixa1 {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-}
-
-.logo-footer {
-    max-width: 120px;
-    height: 70px;
-}
-
-.logo-footer img {
-    width: 100%;
-}
-
-.text-footer p{
-    color: var(--white);
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 16px;
-    margin-bottom: 20px;
-}
-
-.text-footer a {
-    color: var(--blue-suave);
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 16px;
-    margin-bottom: 20px;
-}
-
-.caixa2 {
-    flex: 1;
-}
-
-.caixa2 h4{
-    color: var(--blue-white);
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    margin-bottom: 20px;
-}
-
-.caixa2 p {
-    color: var(--white);
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 16px;
-    margin-bottom: 20px;
-    text-align: justify;
-}
-
-.caixa3 h4{
-    color: var(--blue-white);
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    margin-bottom: 20px;
-}
-
-.caixa3 h5 {
-    color: var(--white);
-    text-decoration: none;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    font-size: 16px;
-    text-align: justify;
-    margin-bottom: 5px;
-}
-
-.caixa3-endereco {
-    margin-bottom: 20px;
-}
-
-.caixa3 {
-    flex: 1;
-}
-
-.caixa4 {
-    flex: 1;
-}
-
-.linha {
-    width: 100%;
-    height: 2px;
-    background: var(--blue-suave);
-}
-
-.direitos-footer p{
-    color: var(--blue-suave);
-    padding: 20px 0px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 100;
-    font-size: 16px;
-}
-
-/*BOTÃO ANCORA SETA*/
-#botao-ancora {
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
-    z-index: 99;
-    display: none;
-    background-color: var(--blue-suave);
-    padding: 8px;
-    border-radius: 25%;
-}
-
-#botao-ancora button {
-    outline: none;
-    background-color: transparent;
-    border: none;
-}
-
-#botao-ancora img {
-    width: 20px;
-    height: 18px;
-}
-
 @media (max-width:576px) {
     /*CONFIG SECTION HEADER*/
-    #header {
-        padding: 0px 30px;
-    }
-
-    #menu-list ul, #menu-list li {
-        display: none;
-    }
-
-    #menu-toggle {
-        display: inline-flex;
-    }
-
     .org-container {
         padding: 50px 30px;
-    }
-
-
-    /*CONFIG FOOTER CONTAINER*/
-    .social-footer {
-        padding: 70px 30px;
-    }
-    
-    .info-footer {
-        flex-direction: column;
-        gap: 40px;
-        padding: 0px 30px;
-    }
-    
-    .direitos-footer {
-        padding: 70px 30px 0px 30px;
-    }
-
-
-    /*CONFIG BOTÃO ANCORA*/
-    #botao-ancora {
-        right: 30px;
-        bottom: 30px;
+        max-width: 100%;
     }
 }
